[package]
name = "server"
version = "0.1.0"
authors = ["ForsakenHarmony <ulliftw@gmail.com>"]

[dependencies]
juniper = { path = "../juniper/juniper", features = ["nightly"] }
juniper_iron = { path = "../juniper/juniper_iron"}
dotenv = "0.13"
diesel = { version = "1.3", features = ["postgres"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
router = "0.6"
mount = "0.4"
logger = "0.4"
iron = ">= 0.5, < 0.7"
